# WSEIDevOps

./: CMakeLists.txt  Dockerfile  deployment.yaml  docker-compose.yml  server.js  service.yaml
.github/workflows/: ci-cd.yml
config/: data.json
src/: DataLoader.cpp  DataLoader.hpp  Mountain.hpp  main.cpp
tests/: exampleTest.cpp
